# Matter-Light-Device

./: .gitignore  Matter-Light-Device.code-workspace  README.md
components/DistributedAutomation/: CMakeLists.txt  Device.cpp  DistributedDevice.cpp  DistributedMatterAPI.cpp  DistributedServer.cpp  JsonUtils.cpp  StateCollection.cpp  dummy.json
components/DistributedAutomation/Automation/: Automation.cpp
components/DistributedAutomation/Automation/Action/: Action.cpp  ActionCallService.cpp  ActionDelay.cpp
components/DistributedAutomation/Automation/Action/include/: Action.hpp  ActionCallService.hpp  ActionDelay.hpp
components/DistributedAutomation/Automation/Condition/: Condition.cpp  ConditionLogical.cpp  ConditionNumericState.cpp  ConditionState.cpp  ConditionStringState.cpp  ConditionTime.cpp  ConditionTrigger.cpp  LogicalOperator.cpp
components/DistributedAutomation/Automation/Condition/include/: Condition.hpp  ConditionLogical.hpp  ConditionNumericState.hpp  ConditionState.hpp  ConditionStringState.hpp  ConditionTime.hpp  ConditionTrigger.hpp  LogicalOperator.hpp
components/DistributedAutomation/Automation/Trigger/: Trigger.cpp  TriggerNumericState.cpp  TriggerState.cpp  TriggerStringState.cpp  TriggerTime.cpp
components/DistributedAutomation/Automation/Trigger/include/: Trigger.hpp  TriggerNumericState.hpp  (+3 more)
components/DistributedAutomation/Automation/include/: Automation.hpp
components/DistributedAutomation/include/: Device.hpp  DistributedDevice.hpp  DistributedMatterAPI.hpp  DistributedServer.hpp  JsonUtils.hpp  State.hpp  StateCollection.hpp
(+27 files in other folders)
